<resources>
    <string name="app_name">calculator</string>
    <string name="calculator_title">Calculator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

    <string name="result_text">Result: %1$d</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>



</resources>